--- a/index.html
+++ b/index.html
@@ -3,19 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transporte de Materiales v38.0</title>
+    <title>Transporte de Materiales v39.0</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; margin: 0; background-color: #f7f9fc; color: #333; }
+        /* MEJORA: Paleta de colores moderna y centralizada */
+        :root {
+            --color-primario: #4A90E2;
+            --color-secundario: #6c757d;
+            --color-fondo: #F8F9FA;
+            --color-texto: #343A40;
+            --color-borde: #DEE2E6;
+            --color-blanco: #FFFFFF;
+            --color-error: #dc3545;
+            --color-exito: #28a745;
+            --color-aviso: #ffc107;
+            --sombra-suave: 0 4px 6px rgba(0,0,0,0.08);
+        }
+
+        body { 
+            font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif; 
+            margin: 0; 
+            background-color: var(--color-fondo); 
+            color: var(--color-texto); 
+        }
         .main-container { max-width: 1200px; margin: 20px auto; padding: 20px; }
         .header-container { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; flex-wrap: wrap; }
         #logo { height: 50px; margin-right: 15px; }
-        h1 { color: #0056b3; margin: 0; }
-        h2, h3 { color: #0056b3; text-align: center; }
+        h1 { color: var(--color-primario); margin: 0; }
+        h2, h3 { color: var(--color-primario); text-align: center; }
         h2 { border-bottom: 2px solid #eef; padding-bottom: 10px; }
-        .card { background: white; padding: 25px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); margin-bottom: 30px; }
-        .tabs { display: flex; border-bottom: 2px solid #ccc; margin-bottom: 20px; }
-        .tab-button { padding: 10px 20px; cursor: pointer; background-color: #eee; border: 1px solid #ccc; border-bottom: none; border-radius: 8px 8px 0 0; margin-right: 5px; font-weight: bold; }
-        .tab-button.active { background-color: #0056b3; color: white; border-color: #0056b3; }
+        .card { 
+            background: var(--color-blanco); 
+            padding: 25px; 
+            border-radius: 10px; 
+            box-shadow: var(--sombra-suave);
+            border: 1px solid var(--color-borde);
+            margin-bottom: 30px; 
+        }
+        .tabs { display: flex; border-bottom: 2px solid var(--color-borde); margin-bottom: 20px; }
+        .tab-button { padding: 10px 20px; cursor: pointer; background-color: #eee; border: 1px solid var(--color-borde); border-bottom: none; border-radius: 8px 8px 0 0; margin-right: 5px; font-weight: bold; }
+        .tab-button.active { background-color: var(--color-primario); color: var(--color-blanco); border-color: var(--color-primario); }
         .tab-content { display: none; }
         .tab-content.active { display: block; animation: fadeIn 0.5s; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
@@ -23,18 +52,22 @@
         ul { list-style-type: none; padding: 0; max-height: 200px; overflow-y: auto; }
         li { display: flex; justify-content: space-between; align-items: center; padding: 8px; border-bottom: 1px solid #eee; }
         li .actions { display: flex; gap: 5px; }
-        input, select { padding: 12px; border: 1px solid #ccc; border-radius: 6px; font-size: 16px; background-color: white; }
-        button { padding: 14px; border: none; border-radius: 6px; cursor: pointer; font-size: 16px; font-weight: bold; transition: background-color 0.3s; }
-        .btn-primary { background-color: #0056b3; color: white; }
-        .btn-success { background-color: #28a745; color: white; }
-        .btn-secondary { background-color: #6c757d; color: white; }
+        input, select { padding: 12px; border: 1px solid var(--color-borde); border-radius: 6px; font-size: 16px; background-color: var(--color-blanco); }
+        button { padding: 14px; border: none; border-radius: 6px; cursor: pointer; font-size: 16px; font-weight: bold; transition: background-color 0.3s, opacity 0.3s; }
+        button:disabled { opacity: 0.7; cursor: not-allowed; }
+        .btn-primary { background-color: var(--color-primario); color: var(--color-blanco); }
+        .btn-success { background-color: var(--color-exito); color: var(--color-blanco); }
+        .btn-secondary { background-color: var(--color-secundario); color: var(--color-blanco); }
         .action-btn, .list-action-btn { font-size: 12px; padding: 5px 10px; }
-        .delete-btn { background-color: #dc3545; color: white; }
-        .edit-btn { background-color: #ffc107; color: black; }
+        .delete-btn { background-color: var(--color-error); color: var(--color-blanco); }
+        .edit-btn { background-color: var(--color-aviso); color: black; }
         table { width: 100%; margin-top: 20px; border-collapse: collapse; }
-        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; word-break: break-word; }
+        th, td { border: 1px solid var(--color-borde); padding: 10px; text-align: left; word-break: break-word; }
         th { background-color: #f2f7ff; }
         tfoot td { font-weight: bold; background-color: #f2f7ff; }
+        /* MEJORA: Estilos para la tabla de reportes */
+        #registrosBody tr:nth-child(even) { background-color: var(--color-fondo); }
+        #registrosBody tr:hover { background-color: #E9ECEF; }
         .grid-container-5 { display: grid; gap: 30px; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); }
         .form-buttons { display: flex; gap: 10px; }
         .filter-form { display: flex; gap: 15px; align-items: center; justify-content: center; flex-wrap: wrap; }
@@ -43,7 +76,6 @@
         .print-only { display: none; }
         #signature-section { display: none; }
         
-        /* --- ESTILOS DE IMPRESIÓN PROFESIONAL (ACTUALIZADOS) --- */
         @media print {
             body { background-color: white; font-size: 9pt; font-family: Arial, Helvetica, sans-serif; }
             @page {
@@ -59,7 +91,7 @@
                 font-weight: bold;
                 color: #003366;
                 padding-bottom: 10px;
-                margin-bottom: 15px; /* Espacio reducido */
+                margin-bottom: 15px;
                 border-bottom: 2px solid #aed6f1;
             }
             .no-print { display: none; }
@@ -74,7 +106,7 @@
             #signature-section {
                 display: flex;
                 justify-content: center;
-                margin-top: 60px; /* Espacio reducido */
+                margin-top: 60px;
             }
             .signature-box { text-align: center; width: 300px; }
             .signature-box p { margin: 2px 0; }
@@ -122,13 +154,10 @@
     const db = getFirestore(app);
     const auth = getAuth(app);
 
-    // VERIFICACIÓN DE AUTENTICACIÓN
     onAuthStateChanged(auth, (user) => {
         if (!user) {
-            // Si no hay un usuario con sesión iniciada, redirige a login.html
             window.location.href = 'login.html';
         } else {
-            // Si el usuario está autenticado, inicializa la aplicación
             inicializarApp();
         }
     });
@@ -141,7 +170,7 @@
                 <h2>🔎 Filtrar e Imprimir</h2>
                 <div class="filter-form">
                     <label for="filtroMes"><strong>Filtrar por Mes:</strong></label><input type="month" id="filtroMes">
-                    <span style="border-left: 1px solid #ccc; margin: 0 10px;"></span>
+                    <span style="border-left: 1px solid var(--color-borde); margin: 0 10px;"></span>
                     <label for="fechaInicio">Desde:</label><input type="date" id="fechaInicio">
                     <label for="fechaFin">Hasta:</label><input type="date" id="fechaFin">
                     <label for="filtroMaterial">Material:</label>
@@ -170,7 +199,6 @@
     const inicializarApp = async () => {
         cargarContenidoHTML();
 
-        // LÓGICA DE CIERRE DE SESIÓN
         document.getElementById('btnLogout').addEventListener('click', () => {
             signOut(auth).catch((error) => console.error("Error al cerrar sesión", error));
         });
@@ -378,6 +406,12 @@
             registrosBody.innerHTML = '';
             registrosTfoot.innerHTML = '';
 
+            // MEJORA: Mensaje de estado vacío
+            if (registros.length === 0) {
+                registrosBody.innerHTML = `<tr><td colspan="11" style="text-align:center; padding: 20px;">No se encontraron registros.</td></tr>`;
+                return;
+            }
+
             let totalViajes = 0;
             let totalVolumen = 0;
 
@@ -388,7 +422,8 @@
                 const volumenTotal = (volumen * numViajes);
                 totalViajes += numViajes;
                 totalVolumen += volumenTotal;
-                fila.innerHTML = `<td>${index + 1}</td><td>${registro.fecha}</td><td>${registro.nombres}</td><td>${registro.placa}</td><td>${registro.material || ''}</td><td>${registro.cantera || ''}</td><td>${registro.proyecto || ''}</td><td>${volumen.toFixed(2)}</td><td>${numViajes}</td><td><b>${volumenTotal.toFixed(2)}</b></td><td class="action-cell"><button class="action-btn edit-btn" data-id="${registro.id}">Modificar</button><button class="action-btn delete-btn" data-id="${registro.id}">Borrar</button></td>`;
+                // MEJORA: Botones con iconos
+                fila.innerHTML = `<td>${index + 1}</td><td>${registro.fecha}</td><td>${registro.nombres}</td><td>${registro.placa}</td><td>${registro.material || ''}</td><td>${registro.cantera || ''}</td><td>${registro.proyecto || ''}</td><td>${volumen.toFixed(2)}</td><td>${numViajes}</td><td><b>${volumenTotal.toFixed(2)}</b></td><td class="action-cell" style="display: flex; gap: 5px;"><button title="Modificar" class="action-btn edit-btn" data-id="${registro.id}">✏️</button><button title="Borrar" class="action-btn delete-btn" data-id="${registro.id}">🗑️</button></td>`;
                 registrosBody.appendChild(fila);
             });
             if (registros.length > 0) {
@@ -469,24 +504,44 @@
 
         transporteForm.addEventListener('submit', async e => {
             e.preventDefault();
-            const idParaEditar = indiceEdicionInput.value;
-            const registro = {
-                fecha: document.getElementById('fecha').value,
-                nombres: document.getElementById('selectNombres').value,
-                placa: document.getElementById('selectPlaca').value,
-                material: document.getElementById('selectMaterial').value,
-                volumen: document.getElementById('volumen').value,
-                numViajes: document.getElementById('numViajes').value,
-                cantera: document.getElementById('selectCantera').value,
-                proyecto: document.getElementById('selectProyecto').value
-            };
-            if (!registro.nombres || !registro.placa || !registro.material || !registro.fecha) {
-                return alert('Por favor, complete todos los campos requeridos.');
+            // MEJORA: Indicador de carga en el botón
+            const btn = btnSubmitViaje;
+            const originalText = btn.textContent;
+            btn.disabled = true;
+            btn.textContent = 'Guardando...';
+
+            try {
+                const idParaEditar = indiceEdicionInput.value;
+                const registro = {
+                    fecha: document.getElementById('fecha').value,
+                    nombres: document.getElementById('selectNombres').value,
+                    placa: document.getElementById('selectPlaca').value,
+                    material: document.getElementById('selectMaterial').value,
+                    volumen: document.getElementById('volumen').value,
+                    numViajes: document.getElementById('numViajes').value,
+                    cantera: document.getElementById('selectCantera').value,
+                    proyecto: document.getElementById('selectProyecto').value
+                };
+                if (!registro.nombres || !registro.placa || !registro.material || !registro.fecha) {
+                    alert('Por favor, complete todos los campos requeridos.');
+                    return;
+                }
+                if (idParaEditar) { await updateDoc(doc(db, "registros", idParaEditar), registro); } 
+                else { await addDoc(collection(db, "registros"), registro); }
+                cargarRegistros();
+                cancelarEdicion();
+            } catch (error) {
+                console.error("Error al guardar el registro:", error);
+                alert("Hubo un error al guardar el registro.");
+            } finally {
+                // Restaura el botón sin importar si hubo éxito o error
+                btn.disabled = false;
+                btn.textContent = originalText;
+                 // Si no está en modo edición, restaura el texto original
+                if (!indiceEdicionInput.value) {
+                    btn.textContent = 'Agregar Registro';
+                }
             }
-            if (idParaEditar) { await updateDoc(doc(db, "registros", idParaEditar), registro); } 
-            else { await addDoc(collection(db, "registros"), registro); }
-            cargarRegistros();
-            cancelarEdicion();
         });
         
         await administrarListaSimple('nombresDeChoferes', 'nombreChoferForm', 'nuevoNombreChofer', 'nombresChoferesLista', ['selectNombreAdmin'], 'Nombre de Chofer');
